changed the title

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a
           class="navbar-brand shadow-sm p-2 bg-body rounded border border-primary text-primary fw-bold"
           href="#"
-          >Tech Blog 💻</a
+          >💻 Tech Blog</a
         >
         <button
           class="navbar-toggler"
